--- a/app/views/partials/addcomment.hbs
+++ b/app/views/partials/addcomment.hbs
@@ -1,7 +1,7 @@
 <form class="ui  segment form" action="/viewuser/addcomment/{{id}}" method="POST">
   <div class="two fields">
     <div class = "field">
-    <input placeholder="^^ Enter comment" type="text" name="comment">
+    <input placeholder="Enter comment" type="text" name="comment">
   </div>
     <div class = "field">
   <button class="ui tiny blue submit button">Add Comment</button>
