--- a/app/views/partials/addgoaltrainer.hbs
+++ b/app/views/partials/addgoaltrainer.hbs
@@ -104,7 +104,7 @@
   
   <div class="field">
            <label>Target</label>
-            <input placeholder="Goal" type="number" name="target">
+            <input placeholder="Goal in kg or cm" type="number" name="target">
         </div>
     
   </div>
