modified login view to show images

--- a/app/views/login.hbs
+++ b/app/views/login.hbs
@@ -15,7 +15,7 @@
         </form>
     </div>
     <div class="column">
-        <img class="ui image" src="/public/images/sbliftjpg">
+        <img class="ui image" src="../images/he-man.jpg">
     </div>
     <div class="eight wide column">
         <form class="ui stacked segment form" action="/authenticateTrainer" method="POST">
@@ -30,6 +30,6 @@
         </form>
     </div>
     <div class="column">
-        <img class="ui image" src="/public/images/sbgym.jpg">
+        <img class="ui image" src="../images/spongegym.jpg">
     </div>
 </div>
